--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.html",
   "scripts": {
     "cy:open": "cypress open",
-    "test": "cypress run"
+    "cy:open:mobile": "cypress open --config viewportWidth=410,viewportHeight=860",
+    "cy:test": "cypress run",
+    "cy:test:mobile": "cypress run --config viewportWidth=410,viewportHeight=860"
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,9 @@
   "license": "MIT",
   "homepage": "https://github.com/wlsf82/cypress-do-zero-a-nuvem#readme",
   "devDependencies": {
-    "cypress": "^13.12.0"
+    "@types/jest": "^30.0.0",
+    "cy": "^0.0.1",
+    "cypress": "^13.12.0",
+    "typescript": "^5.8.3"
   }
 }
